--- a/Capybara go!/styles.css
+++ b/Capybara go!/styles.css
@@ -1,3 +1,4 @@
-/* 
- zorgen dat je niet kunt scrollen dus overflow hidden bij body en 0 margin
- */
+body{
+    margin: 0;
+    overflow: hidden;
+}
